--- a/admin_styles_siv.css
+++ b/admin_styles_siv.css
@@ -30,6 +30,12 @@ body {
     background-color: #001b69;
     color: white;
     cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.tab-button:hover {
+    background-color: white;
+    color: #001b69;
 }
 
 .tab-content {
@@ -55,6 +61,12 @@ button {
     cursor: pointer;
     font-family: 'Daikon', sans-serif;
     font-size: 14px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button:hover {
+    background-color: white;
+    color: #00e8ff;
 }
 
 #traffic-info-list, #announcement-list {
@@ -71,4 +83,30 @@ button {
 
 .info-item p {
     margin: 2px 0; /* Petit espace entre les lignes */
+}
+
+.info-item button.edit {
+    background-color: #ffa500; /* Jaune/Orange */
+}
+
+.info-item button.delete {
+    background-color: #ff0000; /* Rouge */
+}
+
+#scroll-to-top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #00e8ff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    display: none;
+}
+
+#scroll-to-top-button:hover {
+    background-color: white;
+    color: #00e8ff;
 }
