--- a/styles_siv.css
+++ b/styles_siv.css
@@ -118,13 +118,13 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    color: black; /* Mettre le texte en noir */
+    color: black;
 }
 
 .info-display {
     background-color: #f0f0f0;
     padding: 20px;
-    border-radius: 15px; /* Arrondir les coins */
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 800px;
@@ -137,7 +137,7 @@ body {
 
 .header button {
     background-color: #001b69;
-    color: #fffafa; /* Couleur du texte */
+    color: #fffafa;
     font-family: 'Daikon', sans-serif;
     font-weight: bold;
     border: none;
@@ -157,14 +157,14 @@ body {
 }
 
 .stop-header, .departure-item, #traffic-info-header, #traffic-info-details, #progress-bars-container {
-    width: 100%; /* Assurer que la largeur est identique */
+    width: 100%;
     box-sizing: border-box;
 }
 
 .stop-header {
     background-color: #001b69;
-    padding: 5px 10px; /* Réduire la hauteur */
-    border-radius: 5px; /* Réduire l'arrondi des coins */
+    padding: 5px 10px;
+    border-radius: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -183,15 +183,15 @@ body {
     font-family: 'Daikon ExtraBold', sans-serif;
     text-align: center;
     flex-grow: 1;
-    font-size: 22px; /* Réduire la taille de la police */
+    font-size: 22px;
 }
 
 #current-time {
     background-color: #00e8ff;
     padding: 5px 10px;
-    border-radius: 5px; /* Réduire l'arrondi des coins */
+    border-radius: 5px;
     font-size: 16px;
-    font-weight: 600; /* SemiBold */
+    font-weight: 600;
     color: #fffafa;
 }
 
@@ -199,7 +199,7 @@ body {
     margin-bottom: 10px;
     color: black;
     font-size: 14px;
-    font-weight: 600; /* SemiBold */
+    font-weight: 600;
     font-family: 'Daikon', sans-serif;
 }
 
@@ -217,11 +217,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 0; /* Optimiser la hauteur avec un padding de 5px */
+    padding: 5px 0;
     font-size: 18px;
-    margin: 1px 0; /* Espace entre les lignes */
-    border-radius: 5px; /* Coins arrondis */
-    width: 100%; /* Assurer que la largeur est identique */
+    margin: 1px 0;
+    border-radius: 5px;
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -239,10 +239,10 @@ body {
     width: 40px;
     height: 40px;
     display: inline-block;
-    border-radius: 3px; /* Réduire l'arrondi des coins */
+    border-radius: 3px;
     text-align: center;
     line-height: 40px;
-    margin: 0 10px; /* Marge avant et après */
+    margin: 0 10px;
     font-family: 'Daikon ExtraBold', sans-serif;
     font-size: 20px;
 }
@@ -255,24 +255,24 @@ body {
 
 .departure-wait-time {
     font-family: 'Daikon ExtraBold', sans-serif;
-    margin: 0 10px; /* Marge avant et après */
+    margin: 0 10px;
 }
 
 #traffic-info-container {
     margin-top: 20px;
-    width: 100%; /* Assurer que la largeur est identique */
+    width: 100%;
 }
 
 #traffic-info-header {
     background-color: #00e8ff;
     padding: 5px;
-    border-radius: 5px; /* Réduire l'arrondi des coins */
+    border-radius: 5px;
     text-align: center;
     color: #fffafa;
     font-size: 14px;
     font-family: 'Daikon ExtraBold', sans-serif;
     margin-bottom: 5px;
-    height: auto; /* Hauteur relative au texte */
+    height: auto;
 }
 
 #traffic-info-details {
@@ -283,18 +283,16 @@ body {
     font-size: 13px;
     font-family: 'Daikon', sans-serif;
     text-align: left;
-    height: 100px; /* Réduire la hauteur */
+    height: 100px;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Centrer verticalement */
-    margin-bottom: 5px; /* Réduire la marge en bas */
+    justify-content: center;
+    margin-bottom: 5px;
 }
-
 
 #traffic-info-details p {
-    margin: 2px 0; /* Petit espace entre les lignes */
+    margin: 2px 0;
 }
-
 
 #progress-bars-container {
     display: flex;
@@ -309,7 +307,7 @@ body {
     background-color: #ccc;
     border-radius: 3px;
     overflow: hidden;
-    margin: 0 10px; /* Ajoutez une marge de 10px entre les barres */
+    margin: 0 10px;
 }
 
 .progress-bar-fill {
@@ -335,16 +333,16 @@ body {
 .stop-selection {
     display: flex;
     align-items: center;
-    gap: 10px; /* Espace entre les éléments */
+    gap: 10px;
 }
 
 .stop-selection label {
-    margin: 0; /* Supprimer la marge */
-    white-space: nowrap; /* Empêcher le texte de passer à la ligne */
+    margin: 0;
+    white-space: nowrap;
 }
 
 #stop-select {
-    width: 200px; /* Réduire la largeur du sélecteur */
+    width: 200px;
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -357,7 +355,7 @@ body {
     font-family: 'Daikon', sans-serif;
     font-weight: bold;
     border: none;
-    padding: 6px 12px; /* Réduire le padding */
+    padding: 6px 12px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -369,23 +367,23 @@ body {
 }
 
 #suspension-container {
-    width: 760px; /* Largeur spécifiée */
-    height: 240px; /* Hauteur de 8 lignes */
-    text-align: center;
-    display: none; /* Masquer par défaut */
-    margin: 10px auto; /* Centrer horizontalement et ajouter une marge en haut et en bas */
+    width: 760px;
+    height: 400px;
+    margin: 20px auto;
+    background-color: #e9e9e9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .suspension-message {
-    background-color: #e9e9e9;
-    color: black;
-    font-family: 'Daikon', sans-serif;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 16px;
     font-weight: bold;
     padding: 20px;
     border-radius: 5px;
-    height: 100%; /* Utiliser toute la hauteur du conteneur */
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
