--- a/styles_siv.css
+++ b/styles_siv.css
@@ -3,6 +3,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-BlackItalic.woff') format('woff');
     font-weight: 900;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-ExtraLight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -38,6 +43,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-ExtraLightItalic.woff') format('woff');
     font-weight: 200;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -45,6 +51,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -52,6 +59,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -59,6 +67,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-LightItalic.woff') format('woff');
     font-weight: 300;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -66,6 +75,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -73,6 +83,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-MediumItalic.woff') format('woff');
     font-weight: 500;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -80,6 +91,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -87,6 +99,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -94,6 +107,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-SemiBoldItalic.woff') format('woff');
     font-weight: 600;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -101,6 +115,7 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -108,8 +123,8 @@
     src: url('https://cdn.jsdelivr.net/gh/Remi-Ta/mouvae@ecd75c28a629a1874b38ef61d13f83dd02ebb8a9/Daikon-ThinItalic.woff') format('woff');
     font-weight: 100;
     font-style: italic;
+    font-display: swap;
 }
-
 
 body {
     font-family: 'Daikon', sans-serif;
@@ -136,25 +151,34 @@ body {
     margin-bottom: 20px;
 }
 
-.header button {
-    background-color: #001b69;
+.stop-selection label {
+    margin: 0;
+    white-space: nowrap;
+}
+
+#stop-select {
+    width: 300px; /* Augmenter la largeur du sélecteur */
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: 'Daikon', sans-serif;
+}
+
+#validate-button {
+    background-color: #00e8ff;
     color: #fffafa;
     font-family: 'Daikon', sans-serif;
     font-weight: bold;
     border: none;
-    padding: 10px 20px;
-    margin: 5px 0;
+    padding: 6px 12px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
-    display: block;
-    width: 100%;
-    text-align: center;
 }
 
-.header button:hover {
+#validate-button:hover {
     background-color: #fffafa;
-    color: #001b69;
+    color: #00e8ff;
 }
 
 .stop-header, .departure-item, #traffic-info-header, #traffic-info-details, #progress-bars-container {
@@ -181,7 +205,7 @@ body {
 
 #selected-stop {
     font-weight: bold;
-    font-family: 'Daikon ExtraBold', sans-serif;
+    font-family: 'Daikon', sans-serif;
     text-align: center;
     flex-grow: 1;
     font-size: 22px;
@@ -244,18 +268,18 @@ body {
     text-align: center;
     line-height: 40px;
     margin: 0 10px;
-    font-family: 'Daikon ExtraBold', sans-serif;
+    font-family: 'Daikon', sans-serif;
     font-size: 20px;
 }
 
 .departure-destination {
-    font-family: 'Daikon ExtraBold', sans-serif;
+    font-family: 'Daikon', sans-serif;
     flex-grow: 1;
     text-align: center;
 }
 
 .departure-wait-time {
-    font-family: 'Daikon ExtraBold', sans-serif;
+    font-family: 'Daikon', sans-serif;
     margin: 0 10px;
 }
 
@@ -271,7 +295,7 @@ body {
     text-align: center;
     color: #fffafa;
     font-size: 14px;
-    font-family: 'Daikon ExtraBold', sans-serif;
+    font-family: 'Daikon', sans-serif;
     margin-bottom: 5px;
     height: auto;
 }
@@ -335,36 +359,6 @@ body {
     display: flex;
     align-items: center;
     gap: 10px;
-}
-
-.stop-selection label {
-    margin: 0;
-    white-space: nowrap;
-}
-
-#stop-select {
-    width: 200px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-family: 'Daikon', sans-serif;
-}
-
-#validate-button {
-    background-color: #00e8ff;
-    color: #fffafa;
-    font-family: 'Daikon', sans-serif;
-    font-weight: bold;
-    border: none;
-    padding: 6px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-#validate-button:hover {
-    background-color: #fffafa;
-    color: #00e8ff;
 }
 
 #suspension-container {
