--- a/styles_siv.css
+++ b/styles_siv.css
@@ -270,17 +270,20 @@ body {
     margin: 0 10px;
     font-family: 'Daikon', sans-serif;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .departure-destination {
     font-family: 'Daikon', sans-serif;
     flex-grow: 1;
     text-align: center;
+    font-weight: bold;
 }
 
 .departure-wait-time {
     font-family: 'Daikon', sans-serif;
     margin: 0 10px;
+    font-weight: bold;
 }
 
 #traffic-info-container {
