--- a/styles_siv.css
+++ b/styles_siv.css
@@ -301,6 +301,7 @@ body {
     font-family: 'Daikon', sans-serif;
     margin-bottom: 5px;
     height: auto;
+    font-weight: bold;
 }
 
 #traffic-info-details {
